# libnss_homehosts

./: .gitignore  Makefile  Makefile.am  README.md  TODO.txt  configure.ac  libnss_homehosts.c  libnss_homehosts.so.2  make  performance.txt
debian/: changelog  control  copyright  install  links  postinst  postrm
src/: libnss_envhosts.c
